--- a/backend/devices-location/package.json
+++ b/backend/devices-location/package.json
@@ -30,6 +30,7 @@
     "mocha": "^5.1.0"
   },
   "dependencies": {
+    "@nebulae/event-store": "^0.1.5",
     "async-mqtt": "^1.0.1",
     "dotenv": "^5.0.1",
     "jsonwebtoken": "^8.2.1",
