FrontEnd cloud integration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,11 +36,13 @@ jobs:
             gitChanged frontend || npm install -g @angular/cli
       - run:
           name: Register micro-frontend
-          command: |            
+          command: |       
+            source ~/nebulae/repo/.circleci/scripts/gitChanged.sh     
             gitChanged frontend || nebulae register microfrontend --microservice-id=devices-location --frontend-id=emi --setup-file=~/nebulae/repo/etc/mfe-setup.json --store-type=GCP_DATASTORE --gcp-service-account-token=/tmp/gcloud-service-key.json            
       - run:
           name: Compose FrontEnd
-          command: |                        
+          command: |       
+            source ~/nebulae/repo/.circleci/scripts/gitChanged.sh                 
             gitChanged frontend || nebulae compose-ui production --shell-type=FUSE2_ANGULAR --shell-repo=https://github.com/nebulae-tpm/emi.git --frontend-id=emi --output-dir=~/nebulae/frontend/emi/ --store-type=GCP_DATASTORE --gcp-service-account-token=/tmp/gcloud-service-key.json
             gitChanged frontend || ls ~/nebulae/frontend/emi/
       - setup_remote_docker
