--- a/deployment/gke/deployment-devices-location.yaml
+++ b/deployment/gke/deployment-devices-location.yaml
@@ -7,6 +7,8 @@ spec:
   selector:
     matchLabels:
       app: dev-location
+  strategy:
+    type: Recreate    
   template:
     metadata:
       labels:
