--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,28 @@ jobs:
           paths:
             - api  
 
+# ################ MBINIT ################ 
+            
+  build-mbinit:    
+    working_directory: ~/nebulae/
+    docker:
+      - image: golang:1.9-alpine
+        command: sh
+    steps:
+      - attach_workspace:
+          at: ~/nebulae
+      - run:
+          name: Build mbinit
+          command: |
+            mkdir ~/nebulae/go
+            apk add --no-cache git
+            go get github.com/dumacp/mbinit
+            go install github.com/dumacp/mbinit
+            cp /go/bin/mbinit ~/nebulae/go/
+      - persist_to_workspace:
+          root: ~/nebulae/
+          paths:
+            - go
 
 # ################ BACK END ################ 
             
@@ -116,8 +138,9 @@ jobs:
             source ~/nebulae/repo/.circleci/scripts/gitChanged.sh
             cd ~/nebulae/repo/
             mkdir ~/nebulae/backend
+            cp ~/nebulae/go/mbinit ~/nebulae/repo/backend/devices-location/
             export DOCKERHUB_IMAGE=devices-location.backend.devices-location
-            export DOCKERHUB_TAG=0.0.46
+            export DOCKERHUB_TAG=0.0.47
             gitChanged backend/devices-location || docker build  -t $DOCKERHUB_NAMESPACE/$DOCKERHUB_IMAGE:$DOCKERHUB_TAG -t $DOCKERHUB_NAMESPACE/$DOCKERHUB_IMAGE:latest ~/nebulae/repo/backend/devices-location/
             gitChanged backend/devices-location || docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASS
             gitChanged backend/devices-location || docker push $DOCKERHUB_NAMESPACE/$DOCKERHUB_IMAGE:$DOCKERHUB_TAG
@@ -176,10 +199,15 @@ workflows:
           context: TPM
           requires:
             - prepare
-      - build-backend:
+      - build-mbinit:
           context: TPM
           requires:
             - prepare
+     - build-backend:
+          context: TPM
+          requires:
+            - prepare
+            - build-mbinit
       - deploy-prod:
           context: TPM
           requires:
