--- a/backend/devices-location/package.json
+++ b/backend/devices-location/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "start": "node bin/server.js",
+    "sync-state": "node bin/sync_state.js",
+    "prepare": "node bin/prepare.js",
     "test": "./node_modules/.bin/mocha --recursive --reporter spec"
   },
   "repository": {
@@ -30,7 +32,7 @@
     "mocha": "^5.1.0"
   },
   "dependencies": {
-    "@nebulae/event-store": "^0.1.6",
+    "@nebulae/event-store": "^0.3.3",
     "async-mqtt": "^1.0.1",
     "dotenv": "^5.0.1",
     "jsonwebtoken": "^8.2.1",
