--- a/deployment/gke/deployment-devices-location.yaml
+++ b/deployment/gke/deployment-devices-location.yaml
@@ -13,7 +13,7 @@ spec:
         app: dev-location
     spec:      
       containers:
-      - image: nebulaetpm/devices-location.backend.devices-location:0.0.46
+      - image: nebulaetpm/devices-location.backend.devices-location:0.0.47
         name: dev-location
         volumeMounts:
         - name: google-application-credentials
@@ -50,6 +50,9 @@ spec:
           value: '2000'
         - name: BROKER_TYPE
           value: PUBSUB
+        # RESET LOCK INITIALIZE BACKED
+        - name: LOCKVERSION
+          value: "0.0.0"
         
       volumes:
       - name: google-application-credentials
