add resources properties to gke deploy

--- a/deployment/gke/deployment-devices-location-mongo.yaml
+++ b/deployment/gke/deployment-devices-location-mongo.yaml
@@ -44,6 +44,11 @@ spec:
         volumeMounts:
         - name: dev-loc-mongo-persistent-storage
           mountPath: /data/db
+        resources:
+          requests:
+            cpu: "50m"
+          limits:
+            cpu: "100m"
       volumes:
       - name: dev-loc-mongo-persistent-storage
         persistentVolumeClaim:
