--- a/deployment/gke/deployment-devices-location.yaml
+++ b/deployment/gke/deployment-devices-location.yaml
@@ -13,7 +13,7 @@ spec:
         app: dev-location
     spec:      
       containers:
-      - image: nebulaetpm/devices-location.backend.devices-location:0.0.71
+      - image: nebulaetpm/devices-location.backend.devices-location:0.0.72
         name: dev-location
         volumeMounts:
         - name: google-application-credentials
@@ -53,7 +53,10 @@ spec:
         # RESET LOCK INITIALIZE BACKED
         - name: LOCKVERSION
           value: "cries in despair"
-        
+        resources:
+          requests:
+            cpu: "50m"
+            
       volumes:
       - name: google-application-credentials
         secret:
